--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 seaborn = "^0.13.2"
 requests = "^2.31.0"
 statsmodels = "^0.14.2"
+boto3 = "^1.34.106"
 
 
 [tool.poetry.group.dev.dependencies]
